apps/open-webui/namespace-open-webui.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  labels:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/managed-by: ArgoCD
